# eleicao_participacao_analytics

./: .gitignore  CONTRIBUTING.md  Dockerfile.airflow  Dockerfile.dashboard  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/samples/: 2014_mock.csv  2016_mock.csv  2018_mock.csv  2020_mock.csv  2022_mock.csv  2024_mock.csv
docs/: architecture.md  architecture_diagram.md  changelog.md  ci.md  data-model.md  decisions.md  tutorial.md
scripts/: generate_mocks.py
scripts/test/: run_dashboard_mock.bat
src/participacao_eleitoral/: __init__.py  __main__.py  cli.py  config.py  dashboard.py
src/participacao_eleitoral/core/: __init__.py  entities.py  enums.py  services.py  services_silver.py
src/participacao_eleitoral/core/contracts/: __init__.py  comparecimento.py  comparecimento_silver.py  ingestao_metadata.py  silver_metadata.py
src/participacao_eleitoral/ingestion/: __init__.py  converter.py  downloader.py  metadata_store.py  models.py  pipeline.py  results.py  schemas.py  tse_api.py  tse_urls.py
src/participacao_eleitoral/ingestion/schemas/: __init__.py  comparecimento.py
src/participacao_eleitoral/silver/: __init__.py  metadata_store.py  pipeline.py  region_mapper.py  results.py  transformer.py
src/participacao_eleitoral/silver/schemas/: __init__.py  comparecimento_silver.py
src/participacao_eleitoral/utils/: logger.py
tests/: conftest.py
tests/dashboard/: test_dashboard.py
tests/data/: comparecimento_teste.csv
tests/integration/: test_cli.py
tests/integration/ingestion/: test_pipeline.py  test_real_tse_data.py
tests/unit/: test_cli.py  test_converter.py  test_downloader.py  test_downloader_all_public_methods.py  test_logger.py  test_logger_public_api.py  test_models.py  test_settings_default_values.py  test_tse_urls.py
tests/unit/core/: test_comparecimento_contrato.py  test_comparecimento_contrato_detalhado.py  test_dataset_entity.py  test_ingestao_metadata_contract.py
tests/unit/ingestion/: test_converter.py  test_metadata_store.py  test_pipeline.py  test_pipeline_coverage.py  test_schema_comparecimento.py
tests/unit/silver/: test_metadata_store.py  test_pipeline.py  test_region_mapper.py  test_schema_validation.py  test_transformer.py
