[project]
name = "eleicaoparticipacaoanalytics"
version = "0.1.1"
description = "Pipeline de dados para análise de participação eleitoral brasileira com arquitetura Lakehouse"
readme = "README.md"
authors = [
    { name = "Diego Vanderlei", email = "diegobarbosavl@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["eleições", "analytics", "lakehouse", "dados-abertos", "tse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ===== DEPENDÊNCIAS PRINCIPAIS =====
# Bibliotecas principais para o pipeline de dados
dependencies = [
    # Processamento de dados analíticos
    "polars>=1.17.0",      # Engine de processamento de dados (similar ao pandas, mas mais rápida)

    # Banco de dados analítico
    "duckdb>=1.1.0",       # Banco de dados analítico para consultas SQL sobre arquivos Parquet

    # Cliente HTTP
    "httpx>=0.27.0",       # Cliente HTTP moderno com suporte a async

    # Logging estruturado
    "structlog>=24.4.0",   # Logging estruturado e configurável

    # Configurações e validação
    "pydantic>=2.10.0",           # Validação de dados e configurações
    "pydantic-settings>=2.6.0",   # Gerenciamento de configurações com variáveis de ambiente

    # Interface de linha de comando
    "typer>=0.15.0",       # Framework para criar CLIs com type hints

    # Interface rica
    "rich>=13.9.0",        # Renderização rica de texto e tabelas no terminal

    # Tratamento de erros e retry
    "tenacity>=9.1.2",     # Biblioteca para retry com estratégias avançadas

    # Leitura e escrita de dados
    "pyarrow>=22.0.0",     # Leitura e escrita de formatos de dados (Parquet, etc.)
]

# ===== GRUPOS DE DEPENDÊNCIAS (PEP 735) =====
# Dependências organizadas por propósito para desenvolvimento e testes
[dependency-groups]
dev = [
    # Testes
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-httpx>=0.30.0",

    # Linting e tipagem
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    # Ferramentas de desenvolvimento
    "ipython>=8.31.0",
]

test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-httpx>=0.30.0",
]

lint = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# ===== SISTEMA DE BUILD =====
# Configuração para empacotamento e distribuição
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
participacao-eleitoral = "participacao_eleitoral.cli:app"

# ===== CONFIGURAÇÃO DO UV =====
# Gerenciador de pacotes e ambiente Python
[tool.uv]
# Workspace configuration
[tool.uv.workspace]
members = []



# ===== RUFF (LINTER) =====
# Configuração para formatação e linting de código
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===== PYTEST (TESTES) =====
# Configuração para execução de testes
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: Testes unitários (rápidos)",
    "integration: Testes de integração (lentos)",
    "slow: Testes muito lentos",
]

# ===== MYPY (TIPOS) =====
# Configuração para verificação de tipos
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "polars.*",
    "duckdb.*",
    "structlog.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "eleicao_participacao_analytics.*",
]
ignore_missing_imports = true

# ===== COBERTURA DE CÓDIGO =====
# Configuração para análise de cobertura de testes
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "**/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

fail_under = 70
skip_covered = false
show_missing = true